use a font better for Greek and diacritics

--- a/collation/core/static/CE_core/css/collation.css
+++ b/collation/core/static/CE_core/css/collation.css
@@ -385,9 +385,9 @@ td.main_reading, td.overlap_main_reading {
 #single_witness_reading {
 	background: white;
 	left: 10px;
-	font-family: arial;
+	font-family: Cambria;
 	overflow-y: auto;
-	height: 30px;
+	height: 125px;
 }
 
 table.collation_overview {
